fix assign list overflow

--- a/app/assets/stylesheets/issues.css.scss
+++ b/app/assets/stylesheets/issues.css.scss
@@ -347,3 +347,9 @@ h2.title{
 .pinned{
   z-index:1002;
 }
+
+.select-assign{
+  overflow-x: hidden;
+  height: 250px;
+  overflow-y: auto;  
+}
